--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,8 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7",
     "read-excel-file": "^5.5.3",
     "xlsx": "^0.18.5"
