--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
