--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,14 @@
     "cors": "^2.8.5",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7",
+    "qrcode": "^1.5.1",
     "read-excel-file": "^5.5.3",
+    "speakeasy": "^2.0.0",
     "xlsx": "^0.18.5"
   }
 }
